# Quest_32_5

./: CMakeLists.txt
Quest_32_5/: company.proto  main.cpp  movie.json  movies.json
Quest_33_5/: CMakeLists.txt  task1_cart.cpp  task2_fishing.cpp  task3_registry.cpp  task4_average.cpp
Quest_33_5/src/: main.cpp
